# echotune

./: Cargo.toml  LICENSE-MIT  README.md  playlist.epl
docs/: playlist.md  usage.md
src/: configuration.rs  file_format.rs  input.rs  lib.rs  main.rs  song.rs  tui.rs
src/tui/: mod.rs  tooey.rs
