[package]
name = "echotune"
version = "0.1.0-canary-1"
edition = "2021"

[dependencies]
file-format = "0.25.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
rodio = { git = "https://github.com/WilliamAnimate/rodio-iwantthetotalduration.git" }
terminal_size = { version = "0.3.0", default-features = false }
termios = "0.3.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

# [profile.profiling]
# inherits = "release"
# debug = true
# strip = false

